# fake-news-detection

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: api.py
data/: sample_news.csv
docs/: ARCHITECTURE.md  CONCEPTS.md
scripts/: plot_propagation.py
src/fakenews/: __init__.py  benchmark.py  cli.py  config.py  data.py  detect.py  evaluate.py  features.py  models.py  preprocess.py  propagation.py  transformer.py
tests/: test_benchmark.py  test_data.py  test_detector.py  test_features.py  test_preprocess.py  test_propagation.py  test_transformer.py
