[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fakenews"
version = "0.1.0"
description = "Algorithms to spot fake news and stop its propagation across social media."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Abhishek Mittal" }]
keywords = ["fake-news", "misinformation", "nlp", "graph", "diffusion", "machine-learning"]

dependencies = [
    "scikit-learn>=1.1",
    "pandas>=1.4",
    "numpy>=1.22",
    "scipy>=1.8",
    "networkx>=2.8",
    "joblib>=1.1",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.5"]
api = ["flask>=2.2"]
dev = ["pytest>=7.0"]

[project.scripts]
fakenews = "fakenews.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
